<resources>
    <string name="app_name">Slots</string>
    <string name="score_text">SCORE: </string>
    <string name="record_text">RECORD: </string>
    <string name="restart_text">&#128557; RESTART &#128557;</string>
    <string name="spin_text">&#128178; SPIN &#128178;</string>
    <string name="bet_text">BET:</string>
    <string name="bet_plus">&#10133;</string>
    <string name="bet_minus">&#10134;</string>
    <string name="select_slots_text">&#127920; SLOTS &#127920;</string>

    <string name="change_profile_text">Change profile</string>
    <string name="profile_enter_name_text">Enter name</string>
    <string name="profile_change_window_button_next_text">Next</string>
    <string name="profile_enter_pass_window_pass_text">Enter password</string>
    <string name="profile_wrong_pass_window_text">Wrong password\nPlease try again</string>
    <string name="text_OK">OK</string>
    <string name="profile_bad_pass_window_text">Bad password\nPlease try again</string>

</resources>