<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BetRestartFragment">

    <LinearLayout
        android:id="@+id/layout_bet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/layout_bet_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_bet"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bet_text"
                 />

            <TextView
                android:id="@+id/text_bet_number"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/default_bet"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bet_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_bet_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickPlusButton"
                android:text="@string/bet_plus" />

            <Button
                android:id="@+id/button_bet_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OnClickMinusButton"
                android:text="@string/bet_minus" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="OnClickRestart"
            android:text="@string/restart_text" />
    </LinearLayout>

</FrameLayout>