<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="slotsviewmodel"
            type="com.khrayel.slots.SlotsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SlotsFragment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/record_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/slots_text_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{Long.toString(slotsviewmodel.getRecord)}"
                        android:textSize="24sp" />
                    <!--                                    android:text="@{Long.toString(slotsviewmodel.getRecord)}"
                    -->
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/slots_layout_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_text"
                        android:textSize="24sp"
                        app:autoSizeTextType="none" />

                    <TextView
                        android:id="@+id/slots_text_Score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{Long.toString(slotsviewmodel.getScore())}"
                        android:textSize="24sp"
                        app:autoSizeTextType="none" />
                </LinearLayout>
                <!--
                -->

                <LinearLayout
                    android:id="@+id/slots_layout_winloss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/slots_textWinLoss"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/slots_layout_rolls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center"
                android:orientation="horizontal">

                <Space
                    android:id="@+id/slots_space_roll_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView

                    android:id="@+id/slots_text_roll1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:textSize="@dimen/roll_size"
                    android:background="@drawable/roll_background"
                    android:elegantTextHeight="false"
                    android:gravity="center"
                    android:text="@{slotsviewmodel.getRoll1()}"
                    app:autoSizeTextType="uniform" />

                <Space
                    android:id="@+id/slots_space_roll_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/slots_text_roll2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:textSize="@dimen/roll_size"

                    android:background="@drawable/roll_background"
                    android:gravity="center"
                    android:text="@{slotsviewmodel.getRoll2()}"
                    app:autoSizeTextType="uniform" />

                <Space
                    android:id="@+id/slots_space_roll_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/slots_text_roll3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:textSize="@dimen/roll_size"

                    android:background="@drawable/roll_background"
                    android:gravity="center"
                    android:text="@{slotsviewmodel.getRoll3()}"
                    app:autoSizeTextType="uniform" />

                <Space
                    android:id="@+id/space_roll_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/slots_layout_bet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="@{slotsviewmodel.getGameOver() ?  View.GONE:View.VISIBLE}"
                >

                <LinearLayout
                    android:id="@+id/slots_layout_spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/slots_button_spin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/spin_text"

                        />
                    <!--
                    -->
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/slots_layout_bet_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/slots_text_bet"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/bet_text"
                        app:autoSizeTextType="uniform" />

                    <TextView
                        android:id="@+id/slots_text_bet_number"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@{Long.toString(slotsviewmodel.getBet())}"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/slots_layout_bet_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"

                    >

                    <Button
                        android:id="@+id/slots_button_bet_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="OnClick"
                        android:text="@string/bet_plus" />
                    <!--                    -->
                    <Button
                        android:id="@+id/slots_button_bet_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="OnClick"
                        android:text="@string/bet_minus" />
                    <!--                    -->
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/slots_layout_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="@{slotsviewmodel.getGameOver() ?  View.VISIBLE : View.GONE}">

                <Button
                    android:id="@+id/slots_button_restart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/restart_text"

                    />
                <!--            -->

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>