<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profileviewmodel"
            type="com.khrayel.main_app.profile.ProfileViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/profile_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/profile_show_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="visible">

            <Button
                android:id="@+id/profile_show_window_overlay_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_70"
                app:backgroundTint="@color/black_70"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gainsboro"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="@dimen/slots_reel_outline_size"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                tools:visibility="visible">

                <TextView
                    android:id="@+id/profile_show_window_name_text"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="@{profileviewmodel.name}"
                    app:layout_constraintBottom_toTopOf="@id/profile_show_window_change_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Current Profile name" />

                <Button
                    android:id="@+id/profile_show_window_change_button"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="@string/change_profile_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_show_window_name_text"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/profile_change_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="gone">

            <Button
                android:id="@+id/profile_change_window_overlay_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_70"
                app:backgroundTint="@color/black_70"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gainsboro"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="@dimen/slots_reel_outline_size">

                <TextView
                    android:id="@+id/profile_change_window_enter_name_text"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="Currently logged in as:+@{profileviewmodel.name}"
                    app:layout_constraintBottom_toTopOf="@id/profile_change_window_enter_name_editbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Current Profile name" />

                <EditText
                    android:id="@+id/profile_change_window_enter_name_editbox"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:hint="@string/profile_enter_name_text"
                    android:inputType="text"
                    app:layout_constraintBottom_toTopOf="@id/profile_change_window_button_next"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_change_window_enter_name_text" />

                <!-- check if profile exists after pressing this button -->
                <Button
                    android:id="@+id/profile_change_window_button_next"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="@string/profile_change_window_button_next_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_change_window_enter_name_editbox"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/profile_enter_pass_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:visibility="gone"
            tools:visibility="gone">

            <Button
                android:id="@+id/profile_enter_pass_window_overlay_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_70"
                app:backgroundTint="@color/black_70"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gainsboro"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="@dimen/slots_reel_outline_size">

                <TextView
                    android:id="@+id/profile_enter_pass_window_name_text"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="@{profileviewmodel.name}"
                    app:layout_constraintBottom_toTopOf="@id/profile_enter_pass_window_enter_pass_editbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="profile name" />

                <EditText
                    android:id="@+id/profile_enter_pass_window_enter_pass_editbox"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:hint="@string/profile_enter_pass_window_pass_text"
                    app:layout_constraintBottom_toTopOf="@id/profile_enter_pass_window_button_next"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_enter_pass_window_name_text" />

                <Button
                    android:id="@+id/profile_enter_pass_window_button_next"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="@{profileviewmodel.checkIfRemoteProfileExists()?`Profile exists, log in`:`Profile doesn't exist, create`}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_enter_pass_window_enter_pass_editbox"
                    tools:ignore="SpeakableTextPresentCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/profile_wrong_pass_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:visibility="gone"
            tools:visibility="gone">

            <Button
                android:id="@+id/profile_wrong_pass_window_overlay_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_70"
                app:backgroundTint="@color/black_70"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gainsboro"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="@dimen/slots_reel_outline_size"

                >

                <TextView
                    android:id="@+id/profile_wrong_pass_window_text"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="@string/profile_wrong_pass_window_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/profile_bad_pass_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:visibility="gone"
            tools:visibility="gone">

            <Button
                android:id="@+id/profile_bad_pass_window_overlay_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_70"
                app:backgroundTint="@color/black_70"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/gainsboro"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="@dimen/slots_reel_outline_size">

                <TextView
                    android:id="@+id/profile_bad_pass_window_text"
                    android:layout_width="@dimen/setting_window_width"
                    android:layout_height="@dimen/slots_roll_size"
                    android:text="@string/profile_bad_pass_window_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </FrameLayout>

</layout>